Vision copy tweak and fix SDK partners collapsed dead space

--- a/src/styles/components/_collapsed-trusted-section.scss
+++ b/src/styles/components/_collapsed-trusted-section.scss
@@ -38,6 +38,7 @@
 
     &:not(.visible) {
       height: 250px;
+      overflow: hidden;
       .sdk-partners-list-item:nth-child(n + 13) {
         opacity: 0;
         visibility: collapse;
